--- a/.sample.env
+++ b/.sample.env
@@ -5,13 +5,13 @@ OWNER_SKILLS = 'JAVASCRIPT'
 OWNER_STATUS = 'DEVELOPER'
 OWNER_NAME = 'Qasim Ali'
 TIME_ZONE = 'Asia/Karachi'
-MONGODB_URI = 
+MONGODB_URI = mongodb+srv://Userwithpassword54:Dashlinenova555@cluster0.rvrmrho.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
 DB_NAME = 'guru_bot'
-REMOVEBG_KEY = 
+REMOVEBG_KEY = zMAaYcfVcvZehscnX5TskTBP
 PREFIX = '.'
 MODE = 'private'
 statusview = 'true'
-BOTNAME = 'MEGA-AI'
+BOTNAME = 'Vampire_MD'
 antidelete = 'true'
 BOT_NUMBER= 
-OWNERS = '923444844060'
+OWNERS = '923195305207'
